adds commented details of colour palettes to UKSummary.yaml

--- a/Layouts/UKSummary.yaml
+++ b/Layouts/UKSummary.yaml
@@ -1,3 +1,31 @@
+###################################################################################################################################
+
+# For reference: colour palettes
+# '#5694CA',  // Base blue
+# '#ABCBE5',  // Base blue tint 1
+# '#DEEAF4',  // Base blue tint 2
+# '#003078',  // Dark blue
+# '#8098BC',  // Dark blue tint 1
+# '#CCD6E4',  // Dark blue tint 2
+# '#B1B4B6',  // Grey
+# '#D8DADB',  // Grey tint 1
+# '#EFF0F0',  // Grey tint 2
+# '#FFDD00',  // Yellow
+# '#d4351c',  // Red
+# '#009f56',  // green
+
+# "#e0e543",  // Pear
+# "#74bb68",  // Mantis (light green)
+# "#399384",  // Paradiso (green)
+# "#2067AB",  // Matisse (blue)
+# "#12407F",  // Chathams Blue
+# "#640058",  // Pompadour (purple)
+# "#3b0930",  // Loulou (dark purple)
+# "#000000",  // Black
+
+###################################################################################################################################
+
+
 summary:
   - heading: Testing
     fields:
